--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,10 @@
 	<artifactId>gs-rest-service</artifactId>
 	<version>0.1.0</version>
 
-	<parent> 
+	<name>My Leave</name>
+	<description>Spring Boot Test Application By Pawan</description>
+
+	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
 		<version>2.0.3.RELEASE</version>
@@ -63,7 +66,7 @@
 	</properties>
 
 
-	<build> 
+	<build>
 		<plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
